# dag_api

./: pyproject.toml
json2dag/models/: DAG.py  relations.py  utils.py
notebooks/: load_pydantic.ipynb  nonlinear_confounds.ipynb  png
